# Raspberry_pi_5

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  readme.md
.devcontainer/: DockerFile  devcontainer.json
build-rpi-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  mypi
cmake/: toolchain-rpi-aarch64.cmake
src/: main.cpp
